--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,12 @@
-
+version: '3.9'
+services: 
+  my-fastapi-service:
+    container_name: whos-my-ta
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    image: myimage:lastest
+    cpus: 1
+    mem_limit: 1024m
+    ports:
+      - "8000:8000"
